fix: move top_circle__xl up to bottom:60px on mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1625,7 +1625,7 @@ h3, .h3 {
   width: 110px;
   height: 110px;
   right: -25px;
-  bottom: -25px;
+  bottom: 60px;
   top: auto;
   left: auto;
   overflow: hidden;
